@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix displaying of due dates of recurring events in basic list view.
 * [jan] Update broken rows due to migration bug in PostgreSQL (Bug #12101).
 * [mjr] Fix uncompleting tasks from task view in smartmobile view (Bug #12098, &lt;ctimoteo@sapo.pt&gt;).
 * [jan] Include parent tasks in cost object labels.
@@ -1303,6 +1304,7 @@
    <date>2013-03-11</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix displaying of due dates of recurring events in basic list view.
 * [jan] Update broken rows due to migration bug in PostgreSQL (Bug #12101).
 * [mjr] Fix uncompleting tasks from task view in smartmobile view (Bug #12098, &lt;ctimoteo@sapo.pt&gt;).
 * [jan] Include parent tasks in cost object labels.
